// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render multiple nav items 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-left: 1px solid var(--pbl-theme-colors-borders-light);
  padding-left: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 5px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 0.25rem;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.5rem 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 0.25rem var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-light);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 5px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 0.25rem;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.5rem 0;
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 0.25rem var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-light);
}

<div>
  <ul
    class="emotion-0"
    data-testid="pbl-sidebarnav"
  >
    <li
      class="emotion-1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </li>
    <li
      class="emotion-3"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="emotion-2"
      >
        World
      </span>
    </li>
    <li
      class="emotion-1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="emotion-2"
      >
        Bye
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render one nav item 1`] = `
.emotion-0 {
  box-sizing: border-box;
  border-left: 1px solid var(--pbl-theme-colors-borders-light);
  padding-left: 1rem;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 5px 8px;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 0.25rem;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0.5rem 0;
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 0.25rem var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-light);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-size: var(--pbl-theme-typography-button-fontSize);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <ul
    class="emotion-0"
    data-testid="pbl-sidebarnav"
  >
    <li
      class="emotion-1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </li>
  </ul>
</div>
`;
